--- a/.env.example
+++ b/.env.example
@@ -2,22 +2,22 @@
 NEXT_PUBLIC_APP_URL=http://localhost:3001
 
 # Create client id and client secret in anilist developer settings
-CLIENT_ID=
-CLIENT_SECRET=
+CLIENT_ID=24673
+CLIENT_SECRET=QA3caanY7vMZiuZkwKLIjtzS4xzUoYVvEls7OMOk
 
-GRAPHQL_ENDPOINT=
+GRAPHQL_ENDPOINT=https://graphql.anilist.co
 
 # npx auth secret in your terminal
-AUTH_SECRET=
+AUTH_SECRET=iloveyou
 
 # create database instance in https://neon.tech
-DATABASE_URL=
+DATABASE_URL=postgresql://neondb_owner:npg_hbe8imWsLV7p@ep-falling-sunset-a8gwp3ps-pooler.eastus2.azure.neon.tech/neondb?sslmode=require
 
 # create one in consumete api
-ANIME_API_URI=http://localhost:9898
+ANIME_API_URI=https://lusty-consumet-api.vercel.app
 
 # this one is same as ANIME_API_URI copy and paste
-NEXT_PUBLIC_ANIME_API_URL=http://localhost:9898
+NEXT_PUBLIC_ANIME_API_URL=https://lusty-consumet-api.vercel.app
 
 #create one in https://github.com/Gratenes/m3u8CloudflareWorkerProxy
 NEXT_PUBLIC_PROXY_URI=https://proxy
@@ -26,10 +26,10 @@ NEXT_PUBLIC_PROXY_URI=https://proxy
 ANIME_API_URI_V2=http://localhost:9898
 
 #create one ANIME_API v2 in https://github.com/ghoshRitesh12/aniwatch-api
-NEXT_PUBLIC_ANIME_API_URL_V2=http://localhost:9898
+NEXT_PUBLIC_ANIME_API_URL_V2=https://lusty-aniwatch-api.vercel.app
 
 #create v3 in https://github.com/IrfanKhan66/hianime-mapper
-NEXT_PUBLIC_ANIME_API_URL_V3=http://localhost:9898
+NEXT_PUBLIC_ANIME_API_URL_V3=https://lusty-hianime-mapper.vercel.app
 
 NEXT_PUBLIC_SKIP_TIMES=https://api.aniskip.com
 
